# openapi/swagger.json
@@ -1,193 +1,214 @@
 {
-  "openapi" : "3.0.0",
-  "servers" : [ {
-    "description" : "SwaggerHub API Auto Mocking",
-    "url" : "https://virtserver.swaggerhub.com/radeckid/LabelGenerator/1.0.0"
-  } ],
-  "info" : {
-    "description" : "This is very complicated API.",
-    "version" : "1.0.0",
-    "title" : "Label Generator API",
-    "license" : {
-      "name" : "Apache 2.0",
-      "url" : "http://www.apache.org/licenses/LICENSE-2.0.html"
-    }
+  "x-generator": "NSwag v13.5.0.0 (NJsonSchema v10.1.15.0 (Newtonsoft.Json v11.0.0.0))",
+  "swagger": "2.0",
+  "info": {
+    "title": "My Title",
+    "version": "1.0.0"
   },
-  "tags" : [ {
-    "name" : "users",
-    "description" : "Users"
-  } ],
-  "paths" : {
-    "/label/" : {
-      "post" : {
-        "tags" : [ "users" ],
-        "summary" : "creates label",
-        "operationId" : "addLabel",
-        "description" : "Adds label to the system",
-        "responses" : {
-          "201" : {
-            "description" : "label created"
-          },
-          "400" : {
-            "description" : "invalid input, object invalid"
-          },
-          "409" : {
-            "description" : "an existing label already exists"
+  "host": "localhost:58765",
+  "schemes": [
+    "http"
+  ],
+  "paths": {
+    "/Label/delete/{identcode}": {
+      "delete": {
+        "tags": [
+          "Label"
+        ],
+        "operationId": "Label_DeleteLabel",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "identcode",
+            "in": "path",
+            "required": true,
+            "x-nullable": true
           }
-        },
-        "requestBody" : {
-          "content" : {
-            "application/json" : {
-              "schema" : {
-                "$ref" : "#/components/schemas/Label"
-              }
+        ],
+        "responses": {
+          "200": {
+            "x-nullable": true,
+            "description": "",
+            "schema": {
+              "type": "file"
             }
-          },
-          "description" : "Label to create"
+          }
         }
       }
     },
-    "/label/{id}" : {
-      "get" : {
-        "tags" : [ "users" ],
-        "summary" : "Get specific label",
-        "operationId" : "getLabel",
-        "parameters" : [ {
-          "name" : "id",
-          "in" : "path",
-          "description" : "ID of label that needs to be get",
-          "required" : true,
-          "schema" : {
-            "minimum" : 1.0,
-            "type" : "integer",
-            "format" : "int64"
+    "/Label/label/{identcode}": {
+      "get": {
+        "tags": [
+          "Label"
+        ],
+        "operationId": "Label_GetLabel",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "identcode",
+            "in": "path",
+            "required": true,
+            "x-nullable": true
           }
-        } ],
-        "description" : "Get specific label from server",
-        "responses" : {
-          "200" : {
-            "description" : "label send"
-          },
-          "404" : {
-            "description" : "label not found"
-          },
-          "400" : {
-            "description" : "incorrect format of id"
+        ],
+        "responses": {
+          "200": {
+            "x-nullable": true,
+            "description": "",
+            "schema": {
+              "type": "file"
+            }
           }
         }
-      },
-      "delete" : {
-        "tags" : [ "users" ],
-        "summary" : "deletes label",
-        "operationId" : "deleteLabel",
-        "parameters" : [ {
-          "name" : "id",
-          "in" : "path",
-          "description" : "ID of label that needs to be get",
-          "required" : true,
-          "schema" : {
-            "minimum" : 1.0,
-            "type" : "integer",
-            "format" : "int64"
+      }
+    },
+    "/Label/label": {
+      "post": {
+        "tags": [
+          "Label"
+        ],
+        "operationId": "Label_CreateLabel",
+        "consumes": [
+          "application/json",
+          "text/json",
+          "application/*+json"
+        ],
+        "parameters": [
+          {
+            "name": "label",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/LabelDTO"
+            },
+            "x-nullable": false
           }
-        } ],
-        "description" : "Deletes specific label from the system",
-        "responses" : {
-          "200" : {
-            "description" : "label deleted"
-          },
-          "400" : {
-            "description" : "invalid input, object invalid"
-          },
-          "410" : {
-            "description" : "an deleted label already deleted"
+        ],
+        "responses": {
+          "200": {
+            "x-nullable": true,
+            "description": "",
+            "schema": {
+              "type": "file"
+            }
           }
         }
       }
     }
   },
-  "components" : {
-    "schemas" : {
-      "Label" : {
-        "type" : "object",
-        "properties" : {
-          "id" : {
-            "type" : "integer",
-            "format" : "int64"
-          },
-          "date" : {
-            "type" : "string",
-            "format" : "date-time"
-          },
-		  "Sender": {
-			"type": "object",
-			"properties": {
-					"Company" : {
-					"type" : "string"
-				  },
-				  "Name" : {
-					"type" : "string"
-				  },
-				  "Surname" : {
-					"type" : "string"
-				  },
-				  "Street" : {
-					"type" : "string"
-				  },
-				  "HomeNo" : {
-					"type" : "string"
-				  },
-				  "Zip" : {
-					"type" : "string"
-				  },
-				  "City" : {
-					"type" : "string"
-				  }
-			  }
-			},
-			"Receiver": {
-				"type": "object",
-				"properties": {
-				"Company" : {
-					"type" : "string"
-				  },
-				  "Name" : {
-					"type" : "string"
-				  },
-				  "Surname" : {
-					"type" : "string"
-				  },
-				  "Street" : {
-					"type" : "string"
-				  },
-				  "HomeNo" : {
-					"type" : "string"
-				  },
-				  "Zip" : {
-					"type" : "string"
-				  },
-				  "City" : {
-					"type" : "string"
-				  }
-				}
-			},
-			"Features": {
-				"type": "object",
-				"properties": {
-					"deliveryIns" : {
-					"type" : "string"
-				  },
-				  "price" : {
-					"type" : "string"
-				  },
-				  "currency" : {
-					"type" : "string"
-				  },
-				  "weight" : {
-					"type" : "string"
-				  }
-				}
-			}
+  "definitions": {
+    "LabelDTO": {
+      "allOf": [
+        {
+          "$ref": "#/definitions/BaseLabelOfAddressDTOAndFeaturesDTO"
+        },
+        {
+          "type": "object",
+          "required": [
+            "sender",
+            "receiver",
+            "features"
+          ],
+          "properties": {
+            "sender": {
+              "$ref": "#/definitions/AddressDTO"
+            },
+            "receiver": {
+              "$ref": "#/definitions/AddressDTO"
+            },
+            "features": {
+              "$ref": "#/definitions/FeaturesDTO"
+            }
+          }
+        }
+      ]
+    },
+    "AddressDTO": {
+      "type": "object",
+      "required": [
+        "name",
+        "street",
+        "homeNo",
+        "zip",
+        "country",
+        "city"
+      ],
+      "properties": {
+        "company": {
+          "type": "string"
+        },
+        "name": {
+          "type": "string",
+          "minLength": 1
+        },
+        "surname": {
+          "type": "string"
+        },
+        "street": {
+          "type": "string",
+          "minLength": 1
+        },
+        "homeNo": {
+          "type": "string",
+          "minLength": 1
+        },
+        "zip": {
+          "type": "string",
+          "minLength": 1
+        },
+        "country": {
+          "type": "string",
+          "minLength": 1
+        },
+        "city": {
+          "type": "string",
+          "minLength": 1
+        },
+        "email": {
+          "type": "string"
+        },
+        "mobile": {
+          "type": "string"
+        }
+      }
+    },
+    "FeaturesDTO": {
+      "type": "object",
+      "required": [
+        "price",
+        "currency",
+        "weight"
+      ],
+      "properties": {
+        "deliveryIns": {
+          "type": "string"
+        },
+        "price": {
+          "type": "number",
+          "format": "decimal"
+        },
+        "currency": {
+          "type": "string",
+          "minLength": 1
+        },
+        "weight": {
+          "type": "number",
+          "format": "decimal"
+        }
+      }
+    },
+    "BaseLabelOfAddressDTOAndFeaturesDTO": {
+      "type": "object",
+      "x-abstract": true,
+      "properties": {
+        "sender": {
+          "$ref": "#/definitions/AddressDTO"
+        },
+        "receiver": {
+          "$ref": "#/definitions/AddressDTO"
+        },
+        "features": {
+          "$ref": "#/definitions/FeaturesDTO"
         }
       }
     }
